2007-09-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore.mdp, lib/libsteticui.mdp, lib/libstetic.mdp,
	  lib/Makefile.am, MonoDevelop.GtkCore.mds, Makefile.am: Use projects for
	  imported stetic libraries.

2007-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Removed access to
	  Component object.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Remove unused method.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.Dialogs/SelectRenamedClassDialog.cs,
	  MonoDevelop.GtkCore.Dialogs/WidgetBuilderOptionPanel.cs,
	  MonoDevelop.GtkCore.Dialogs/BindDesignDialog.cs,
	  MonoDevelop.GtkCore.Dialogs/ConfirmWindowDeleteDialog.cs: Fix warnings.

2007-09-13  Michael Hutchinson <mhutchinson@novell.com> 

	* lib/stetic, Makefile.am, lib/Makefile.am: Build stetic from 
	  svn:externals.
	* lib/libsteticui.dll.config, lib/libstetic.dll.config,
	  lib/libstetic.dll, lib/libsteticui.dll: Removed.

2007-09-10  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/WidgetPartial.xft.xml, templates/Widget.xft.xml,
	  templates/WindowPartial.xft.xml, templates/Window.xft.xml,
	  templates/ActionGroupPartial.xft.xml, templates/ActionGroup.xft.xml,
	  templates/DialogPartial.xft.xml, templates/Dialog.xft.xml: Remove
	  deprecated FileOptions element from templates.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* lib/libsteticui.dll, lib/libstetic.dll,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs,
	  MonoDevelop.GtkCore.GuiBuilder/ActionGroupView.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: Changed the way to
	  set the active designer (the api changed). Fixed some renaming issues.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProjectPad.cs: Track api changes.

2007-09-07  Michael Hutchinson <mhutchinson@novell.com> 
