@@ -1,3 +1,11 @@
+2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.GtkCore/GtkDesignInfo.cs: Don't touch GTK# assembly versions
+	  when a target version is not set. Don't use gtkVersion=null to represent
+	  default version.
+	* MonoDevelop.GtkCore/GtkCoreService.cs: Set TargetGtkVersion on new
+	  projects. Bump default version to 2.8.
+
 2007-09-17  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.GtkCore.mdp, lib/libsteticui.mdp, lib/libstetic.mdp,
